Fix spacing issue, add note about breakpoints

--- a/_sass/pages/_courseware.scss
+++ b/_sass/pages/_courseware.scss
@@ -240,16 +240,6 @@
   }
 }
 
-// Course Layout Wrapper (eliminate spacing between nav & right panel on wide screens)
-.course-wrapper .col-sm-3 {
-  padding-right: 15px;
-}
-@include breakpoint(small, min) {
-  .course-wrapper .col-sm-3 {
-    padding-right: 0;
-  }
-}
-
 // Course Accordion Nav
 .course-navigation {
   .group-heading {
@@ -426,6 +416,17 @@
 // Course Wrapper
 .course-wrapper {
   margin-top: 20px;
+
+  // Eliminate spacing between nav & right panel on wide screens
+  // TODO: we need to figure out our breakpoints for consistency. The $breakpoints variable doesn't reference this size at all.
+  @media (min-width: 768px) {
+    .col-sm-3 {
+      padding-right: 0;
+    }
+    .col-sm-9 {
+      padding-left: 0;
+    }
+  }
 
   main {
     padding: 20px;
